Bug 104035 - FILESAVE: RTF: Content from one page is displayed in 2 pages after roundtrip
Summary: FILESAVE: RTF: Content from one page is displayed in 2 pages after roundtrip
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1 all versions
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.1.0 target:6.0.0.1
Keywords: bibisected, bisected, filter:rtf, regression
Depends on:
Blocks: RTF
  Show dependency treegraph
 
Reported: 2016-11-19 17:03 UTC by Xisco Faulí
Modified: 2017-12-01 21:46 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample (70.08 KB, application/rtf)
2016-11-19 17:03 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2016-11-19 17:03:40 UTC
Created attachment 128876 [details]
sample

Steps:
1. Open the attached file
2. Save it as a new .RTF file
3. Open the new file

Observed behaviour: Last section of each page is displayed on the next page after roundtrip

Reproduced in 

Version: 5.3.0.0.alpha1+
Build ID: 757a60d01dd152aadab2ba3c8224252481ce8a88
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk3; Layout
Engine: new; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

but not in

Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e
Comment 1 Xisco Faulí 2016-11-19 17:05:53 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@suse.cz>	2012-12-23 13:37:59 (GMT)
committer	Miklos Vajna <vmiklos@suse.cz>	2012-12-23 14:48:32 (GMT)
commit 07c80d23fadcc2334fe7c6f9ce7b5dafeb88d623 (patch)
tree 731bc0f214368b0eb5c4e6237a4b990d8b6c823d
parent 68aecf0dd81b6660e78e8dd758ec9431727f4f0b (diff)

fdo#58076 fix import of RTF page margins vs partial section props
The problem was that \sbknone (being a section property) triggered
creating a section, but the document doesn't have multiple sections.
Make sure we don't send section properties as long as no \sect control
words present.

Adding Cc: to Miklos Vajna
Comment 2 Commit Notification 2017-11-28 13:20:25 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b5e871deb8ce390b9fa694e21b0272c7462da703

tdf#104035 RTF export: fix handling of absolute tab positions

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2017-11-28 20:54:10 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=822e9af8ec8018fed098c16a50136fb9f0fa5b0e&h=libreoffice-6-0

tdf#104035 RTF export: fix handling of absolute tab positions

It will be available in 6.0.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2017-12-01 21:46:43 UTC
Verified in

Version: 6.1.0.0.alpha0+
Build ID: 889c72a7e54f241342f42b1b0a05858902228cbc
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded