tdf#104035 RTF export: fix handling of absolute tab positions

RtfAttributeOutput::ParaTabStop() assumed that they are always absolute,
but WW8AttributeOutput::ParaTabStop() points out what compat setting
decides if they are absolute or relative.

Change-Id: Iafe8f6bb8733cae38a89f6c407763b0327e894e8